# pint-cf

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  TODO  TODO.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: api.md  conf.py  index.md  overview.md  sd-registry.puml  sd-usage.puml  structure.puml  third_party_licenses.md
docs/arch/: overview.md  sd-registry.puml  sd-temperature.puml  sd-usage.puml  structure.puml
src/pint_cf/: __init__.py  context.py  metadata.py  parser.py  units.py
src/pint_cf/resources/: udunits2.lark
src/pint_cf/resources/registry/: UDUNITS2-COPYRIGHT.txt  cf-extensions.txt  udunits2-accepted.txt  udunits2-base.txt  udunits2-common.txt  udunits2-derived.txt  udunits2-prefixes.txt  udunits2.txt
tests/: conftest.py  test_api.py  test_cf_extensions.py  test_context.py  test_decibel_reference.py  test_formatter.py  test_metadata.py  test_parser.py
tools/: parse_xml.py  registrygen.py  xmlrd.py
tools/xml/: udunits2-accepted.xml  udunits2-base.xml  udunits2-common.xml
