[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pint-cf"
authors = [{ name = "Pedro Gámez" }]
description = "CF-compliant unit registry and formatter for Pint"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["Pint>=0.25.2", "lark"]

[dependency-groups]
tests = ["pytest", "pytest-cov"]
build = ["build", "twine"]
tools = ["defusedxml"]
dev = [
    { include-group = "tests" },
    { include-group = "tools" },
    { include-group = "build" },
    "cf-units",
    "cfunits",
    "prek",
    "ruff",
]

[tool.setuptools.dynamic]
version = { attr = "pint_cf.__version__" }

[tool.setuptools.packages.find]
where = ["src/"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = ""
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
omit = ["tests/*", "*/__init__.py"]
