[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pint-cf"
authors = [{name = "Pedro Gámez"}]
description = "A CF-compliant, pure-Python unit registry and formatter for Pint"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = ["Pint>=0.25.2", "lark"]

[project.urls]
Homepage = "https://github.com/pgamez/pint-cf"
Documentation = "https://pgamez.github.io/pint-cf/"
Issues = "https://github.com/pgamez/pint-cf/issues"

[dependency-groups]
tests = ["pytest", "pytest-cov"]
build = ["build", "twine"]
tools = ["defusedxml"]
docs = ["sphinx", "myst-parser", "furo"]
lint = ["ruff"]
dev = [
  {include-group = "tests"},
  {include-group = "tools"},
  {include-group = "build"},
  {include-group = "docs"},
  {include-group = "lint"},
  "cf-units",
  "cfunits",
  "prek"
]

[tool.coverage.run]
omit = ["tests/*", "*/__init__.py"]

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = ""
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors (PEP8 style)
  "W", # pycodestyle warnings
  "F", # pyflakes (unused imports/vars, undefined names, etc.)
  "I", # isort (import sorting/grouping)
  "B", # flake8-bugbear (likely bugs and design issues)
  "S", # flake8-bandit (security checks)
  "UP", # pyupgrade (use modern syntax for the target Python version)
  "C4", # flake8-comprehensions (simplify comprehensions)
  "SIM", # flake8-simplify (simplify obviously complex constructs)
  "RUF" # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.setuptools.dynamic]
version = {attr = "pint_cf.__version__"}

[tool.setuptools.package-data]
"*" = ["*.txt", "*.lark", "py.typed"]

[tool.setuptools.packages.find]
where = ["src/"]

[tool.tomlsort]
sort_first = ["build-system", "project"]
